[package]
name = "performance-mark-attribute"
description = "performance_mark is an attribute macro that adds performance (time) logging to methods."
authors = ["Jamalam <james@jamalam.tech>"]
repository = "https://github.com/Jamalam360/performance-mark"
categories = [
    "development-tools",
    "development-tools::profiling"
]

edition = "2021"
version.workspace = true
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
performance-mark-macro = { version = "^0.2.1", path = "macro" }

[workspace]
members = [".", "impl", "macro"]
default-members = [".", "impl"]

[workspace.package]
version = "0.2.1"
